src/test/deca/codegen/valid/with-object/if_with_result_of_method.deca
class A{
    boolean f(){
        return true;
    }
}

{
    A a = new A();
    if(a.f()){
        println("Hello World 2 !");
    }
}