src/test/deca/codegen/invalid/with-object/if_with_new_inside.deca
class A{
}
{
    if(new A()){
        println("Hello World !");
    }
}